--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -144,14 +144,13 @@
   bottom: 0;
   color: transparent; /* text drawn on canvas, this layer only for selection */
   user-select: text;
-  pointer-events: none;
+  pointer-events: auto;
 }
 
 /* Clickable links */
 .annotationLayer a {
   position: absolute;
   text-decoration: underline;
-  color: blue;
   pointer-events: auto;
   cursor: pointer;
 }
